...
                    // Title
                    Text(viewModel.movie.title)
                        .font(.largeTitle)
                        .fontWeight(.bold)
                        .padding(.horizontal)
                        .padding(.top, 16)
                        .accessibilityIdentifier("movieDetail_title_text")

                    // HStack for Release Date and Rating
                    HStack(spacing: 16) {
                        HStack {
                            Image(systemName: "star.fill")
                                .foregroundColor(.yellow)
...
                                .padding(8)
                                .background(Circle().fill(Color.black.opacity(0.4))) 
                                .clipShape(Circle())
                        }
                    }
                    .imageScale(.large)
                    .accessibilityIdentifier("movieDetail_favorite_button")
            )
        }
    }
}

#if DEBUG
...
