...
                        if viewModel.isFetchingNextPage { // Use a specific flag for pagination loading
                            ProgressView()
                                .padding()
                                .accessibilityIdentifier("movieFeed_nextPage_progressView")
                        }
                    }
                    .accessibilityIdentifier("movieFeed_movieList_scrollView")
                }
            }
            .navigationBarTitle("Movies")
            .navigationBarTitleDisplayMode(.automatic)
            .onAppear {
                if viewModel.movies.isEmpty && viewModel.searchText.isEmpty && viewModel.selectedGenre == Genre.all {
...
